# http/swagger.yml
@@ -3778,6 +3778,11 @@ paths:
           name: org
           schema:
             type: string
+          description: filter tasks to a specific organization name
+        - in: query
+          name: orgID
+          schema:
+            type: string
           description: filter tasks to a specific organization ID
         - in: query
           name: limit
